# seedh

./: AllSequences.cpp  AllSequences.h  CMakeLists.txt  OneSequence.cpp  OneSequence.h  Seed.cpp  Seed.h  score_meta.cpp  seedh  utils.h
